--- a/.crucible/manifest.json
+++ b/.crucible/manifest.json
@@ -12,7 +12,8 @@
     "validator",
     "graph",
     "generator",
-    "cli"
+    "cli",
+    "claude"
   ],
   "strict_validation": true,
   "metadata": {
