--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,6 @@ clap = { version = "4.0", features = ["derive"] }
 petgraph = "0.6"
 semver = "1.0"
 colored = "2.0"
+handlebars = "5.0"
+walkdir = "2.0"
+ignore = "0.4"
