--- a/crucible-core/Cargo.toml
+++ b/crucible-core/Cargo.toml
@@ -14,6 +14,7 @@ semver.workspace = true
 handlebars.workspace = true
 walkdir.workspace = true
 ignore.workspace = true
+dirs = "5.0"
 
 [dev-dependencies]
 tempfile = "3.0"
