--- a/crucible-core/Cargo.toml
+++ b/crucible-core/Cargo.toml
@@ -4,6 +4,13 @@ version.workspace = true
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
+description = "Core library for Crucible architecture validation framework"
+keywords.workspace = true
+categories.workspace = true
+readme.workspace = true
 
 [dependencies]
 serde.workspace = true
