--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,58 +2,74 @@ name: CI
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  validate-architecture:
+  ci:
+    name: CI Checks
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
 
-    - name: Install Rust
-      uses: actions-rs/toolchain@v1
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Install Rust toolchain
+      uses: dtolnay/rust-toolchain@stable
       with:
-        toolchain: stable
-        components: rustfmt, clippy
-        override: true
+        components: clippy, rustfmt
 
     - name: Cache cargo registry
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.cargo/registry
         key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-cargo-registry-
 
     - name: Cache cargo index
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.cargo/git
         key: ${{ runner.os }}-cargo-git-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-cargo-git-
 
     - name: Cache cargo build
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: target
-        key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+        key: ${{ runner.os }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-cargo-build-
 
-    - name: Build
-      run: cargo build --release
-
-    - name: Validate Crucible's Architecture
-      run: cargo run --bin crucible --release -- validate --path .crucible --strict
-
-    - name: Run tests
-      run: cargo test --all
-
+    # Fast checks first (fail fast)
     - name: Check formatting
       run: cargo fmt --all -- --check
 
     - name: Run clippy
       run: cargo clippy --all-targets --all-features -- -D warnings
+
+    # Build and test
+    - name: Build release
+      run: cargo build --release --all
+
+    - name: Run tests
+      run: cargo test --all
+
+    # Validate Crucible's own architecture
+    - name: Validate Crucible's architecture
+      run: cargo run --bin crucible --release -- validate --path crucible-core/.crucible --strict
+
+    # Documentation check
+    - name: Check documentation
+      run: cargo doc --no-deps --all-features
+      env:
+        RUSTDOCFLAGS: -D warnings
 
   # TODO: Add example validation once examples are complete
   # test-examples:
