--- a/crucible-cli/Cargo.toml
+++ b/crucible-cli/Cargo.toml
@@ -11,6 +11,11 @@ description.workspace = true
 keywords.workspace = true
 categories.workspace = true
 readme.workspace = true
+include = [
+    "src/**/*",
+    "Cargo.toml",
+    "../.claude/commands/*.md",
+]
 
 [[bin]]
 name = "crucible"
@@ -22,7 +27,7 @@ bin-dir = "{ bin }{ binary-ext }"
 pkg-fmt = "tgz"
 
 [dependencies]
-crucible-core = { version = "0.1.2", path = "../crucible-core" }
+crucible-core = { version = "0.1.5", path = "../crucible-core" }
 clap.workspace = true
 anyhow.workspace = true
 colored.workspace = true
