Move slash command files to crucible-cli package for publishing

--- a/crucible-cli/Cargo.toml
+++ b/crucible-cli/Cargo.toml
@@ -14,7 +14,7 @@ readme.workspace = true
 include = [
     "src/**/*",
     "Cargo.toml",
-    "../.claude/commands/*.md",
+    ".claude/commands/*.md",
 ]
 
 [[bin]]
