chore: restructure documentation for package distribution
### Changes
- Move docs/ from project root into crucible-cli/docs/ for proper package inclusion
- Update Cargo.toml include paths to relative paths within crucible-cli
- Update CHANGELOG.md with complete v0.1.7 documentation improvements

### Impact
- Documentation now properly included in published package (43 files)
- Users get full documentation with crucible-cli installation
- Verified with cargo package --list

--- a/crucible-cli/Cargo.toml
+++ b/crucible-cli/Cargo.toml
@@ -15,14 +15,14 @@ include = [
     "src/**/*",
     "Cargo.toml",
     ".claude/commands/*.md",
-    "../docs/README.md",
-    "../docs/QUICKSTART.md",
-    "../docs/schema-reference.md",
-    "../docs/type-system.md",
-    "../docs/common-mistakes.md",
-    "../docs/cli-reference.md",
-    "../docs/feedback.md",
-    "../docs/examples/**/*",
+    "docs/README.md",
+    "docs/QUICKSTART.md",
+    "docs/schema-reference.md",
+    "docs/type-system.md",
+    "docs/common-mistakes.md",
+    "docs/cli-reference.md",
+    "docs/feedback.md",
+    "docs/examples/**/*",
 ]
 
 [[bin]]
