feat: add crucible-compliance module with BSL 1.1 license
- Add HIPAA Security Rule compliance validation (53 rules)
- Support multiple output formats: Text, JSON, SARIF, Markdown, HTML
- Standardize include patterns across all three crates
- Add docs-internal to .gitignore for development documents

crucible-compliance is licensed under BSL 1.1 (converts to Apache 2.0
on December 31, 2029) while core and cli remain Apache 2.0.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .codemender/
 logs/
 docs-integration/
+docs-internal/
+
 # Rust
 target/
 Cargo.lock
@@ -20,6 +22,3 @@ Thumbs.db
 # Test outputs
 test-output/
 generated/
-
-# Private compliance crate (has separate git repo)
-crucible-compliance/
