--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ resolver = "2"
 
 [workspace.package]
 version = "0.1.10"
-authors = ["Crucible Contributors"]
+authors = ["Andrey Vasilevsky"]
 edition = "2021"
 license = "Apache-2.0"
 repository = "https://github.com/anvanster/crucible"
